# fontrenamer

./: LICENSE  README.md  pyproject.toml
src/: fontnamer.py
